fix: boxedWrap (no translated)

--- a/assets/css/components/boxed/boxedWrap.less
+++ b/assets/css/components/boxed/boxedWrap.less
@@ -17,6 +17,10 @@
     }
   }
 
+  &-fullwidth {
+    width: 100%;
+  }
+
   //color states
   &-primary {
     background: var(--primary);
